@@ -1,3 +1,11 @@
+2015-02-22  Bernd Edlinger  <bernd.edlinger@hotmail.de>
+
+	PR fortran/64980
+	PR fortran/61960
+	* trans-expr.c (gfc_apply_interface_mapping_to_expr): Remove mapping
+	for component references to class objects.
+	(gfc_conv_procedure_call): Compare the class by name.
+
 2015-02-13  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR fortran/64506
